--- a/templates/dashboard_block.html
+++ b/templates/dashboard_block.html
@@ -7,17 +7,17 @@
     <main role="main" style="margin-top: 2rem;">
         <section class="jumbotron text-center">
             <div class="container">
-                <h2 class="jumbotron-heading">Реферальная ссылка пользователя {{ user.username }}</h2>
+                <h2 class="jumbotron-heading">User referral link {{ user.username }}</h2>
                 <p class="lead text-muted referral-link">
                     <i class="fa fa-link" aria-hidden="true"></i>
                     &nbsp;
                     <span>https://enjoyjumping.com/referrals/{{ referral_code.code }}/</span>
                 </p>
                 <button id="copy-referral-link-btn" class="btn btn-success mb-2" data-toggle="tooltip" data-placement="top" data-clipboard-text="https://enjoyjumping.com/referrals/{{ referral_code.code }}/">
-                    <span>Копировать реферальную ссылку</span>
+                    <span>Copy referral link</span>
                 </button>
                 <br>
-                <a class="btn btn-lg btn-success" href="{% url 'admin:index' %}">Редактировать</a>
+                <a class="btn btn-lg btn-success" href="{% url 'admin:index' %}">Edit</a>
             </div>
         </section>
     </main>
@@ -25,14 +25,14 @@
     <main role="main">
         <section class="jumbotron text-center">
             <div class="container">
-                <h2 class="jumbotron-heading">Ваша уникальная реферальная ссылка</h2>
+                <h2 class="jumbotron-heading">Your unique referral link</h2>
                 <p class="lead text-muted referral-link">
                     <i class="fa fa-link" aria-hidden="true"></i>
                     &nbsp;
                     <span>https://enjoyjumping.com/referrals/{{ referral_code.code }}/</span>
                 </p>
                 <button id="copy-referral-link-btn" class="btn btn-success" data-toggle="tooltip" data-placement="top" data-clipboard-text="https://enjoyjumping.com/referrals/{{ referral_code.code }}/">
-                    <span>Копировать реферальную ссылку</span>
+                    <span>Copy referral link</span>
                 </button>
                 <p class="mt-3">Поделиться:</p>
                 <ul class="social-icons icon-rounded  list-unstyled list-inline">
@@ -75,7 +75,7 @@
                     <h1 class="card-title pricing-card-title">
                         {% if last_month_amount %}{{ last_month_amount }}{% else %}0{% endif %}</h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Сумма накопленная за предыдущие месяцы</li>
+                        <li>Amount accumulated in previous months</li>
                     </ul>
                 </div>
             </div>
@@ -100,9 +100,9 @@
                     <h1 class="card-title pricing-card-title">{{ referrals_count }}</h1>
                     <ul class="list-unstyled mt-3 mb-4">
                         {% if request_user.is_superuser %}
-                            <li>Количество последователей</li>
+                            <li>Number of followers</li>
                         {% else %}
-                            <li>Количество ваших последователей</li>
+                            <li>Number of your followers</li>
                         {% endif %}
                     </ul>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="card-body">
                     <h1 class="card-title pricing-card-title">{{ bonus_referral_count }}</h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Количество активных последователей за этот месяц</li>
+                        <li>Number of active followers this month</li>
                     </ul>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="card-body">
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Количество последователей первого уровня: {{ first_level_referral_count }}</li>
+                        <li>Number of followers of the first level: {{ first_level_referral_count }}</li>
                         <li>Активных последователей: {{ first_level_bonus_referral_count }}</li>
                         {% if request_user.is_superuser %}
                             <li>За текущий месяц {{ user }} заработал(a): {{ first_level_amount }}</li>
